# Xen

./: .gitignore  CNAME  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  fly.toml  package.json  tailwind.config.js
.github/workflows/: fly-deploy.yml
posts/: 10-09-25_Aeon-Keys-Serum-Like-Web-Synthesizer.md  10-09-25_Project:-Experimental-Wavetable-Synthensizer.md  21-09-21_Markdown-Maintenance-Check.md  21-09-21_Random-Blog-Testing.md  a-new-hope.md  experimental-wavetable-synthensizer.md  go-static-analysis.md  parser-combinators.md
public/: Vishesh.gpg  VisheshResume.tex  highlight.generated.css  main.css  main.generated.css  makefile  manifest.json  myresume.cls  posts.css  resume.aux  resume.fdb_latexmk  resume.fls  resume.tex  tailwind.generated.css
src/: Cargo.toml  main.rs  utils.rs  videoplayer.rs
templates/: footer.html  header.html
templates/blog/: index.html  post.html
templates/index/: index.html
