[package]
name = "Xen"
version = "0.1.0"
authors = ["Vishesh Choudhary <vishachoudhary@gmail.com>"]
edition = "2018"
description = "Personal Website of Vishesh Choudhary."
repository = "https://github.com/visheshc14/Xen"
homepage = "https://github.com/visheshc14/Xen"
license = "MIT"
keywords = ["cms", "website", "blog", "web"]
readme = "README.md"

[dependencies]
# Use Rocket 0.5 (latest release candidate)
rocket = "0.5.1"
askama = { version = "0.12.1", features = ["with-rocket"] }
askama_rocket = "0.12.0"  # Updated to support rocket v0.5.1
rust-embed = { version = "5.9.0", features = ["debug-embed"] }
chrono = "0.4.19"
comrak = { git = "https://github.com/visheshc14/comrak", branch = "master" }
syntect = { version = "4.5.0", default-features = false, features = ["default-fancy"] }
rustc_version_runtime = "0.2.0"
lazy_static = "1.4.0"
pest = "2.7.10"
memchr = "2.4.0"
time = "0.3.36"

[[bin]]
name = "xen"
path = "src/main.rs"
