[package]
name = "Xen"
version = "0.1.0"
authors = ["Vishesh Choudhary <vishachoudhary@gmail.com>"]
edition = "2018"
description = "Personal Website of Vishesh Choudhary."
repository = "https://github.com/visheshc14/Xen"
homepage = "https://github.com/visheshc14/Xen"
license = "MIT"
keywords = ["cms", "website", "blog", "web"]
readme = "README.md"

[dependencies]
# Use Rocket 0.5 (latest release candidate)
rocket = { version = "0.5.1", features = ["json"] }
askama = "0.12"
askama_rocket = "0.12"
html-escape = "0.2"
rust-embed = { version = "6.4.0", features = ["debug-embed"] }
chrono = "0.4"
comrak = { git = "https://github.com/visheshc14/comrak", branch = "master" }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
rustc_version_runtime = "0.2.1"
lazy_static = "1.4.0"
markdown-meta-parser = "0.1.1"
pest = "2.7.10"
memchr = "2.4.0"
time = "0.3.36"

[[bin]]
name = "xen"
path = "src/main.rs"
