[package]
name = "videoplayer"
version = "0.1.0"
authors = ["Vishesh Choudhary <vishachoudhary@gmail.com>"]
description = "Simple Multimedia Player Add-On"
license = "MIT"
repository = "https://github.com/vishesh/c14"
keywords = ["player","rust-lang","sdl2"]

[dependencies]
clap = "2.24.1"
sdl2 = "0.34"
av-data = "0.3.0"
av-codec = "0.2.0"
av-format = "0.3.0"
libvpx =   "0.1.0"
magnum-opus =  "0.3.2"
matroska = "0.7.0"
av-vorbis = { git = "https://github.com/rust-av/av-vorbis" }